translate redis.conf

--- a/doc/md/redis.windows.conf
+++ b/doc/md/redis.windows.conf
@@ -30,7 +30,7 @@
 # include .\path\to\local.conf
 # include c:\path\to\other.conf
 
-################################## NETWORK #####################################
+################################## NETWORK - 网络 #####################################
 
 # By default, if no "bind" configuration directive is specified, Redis listens
 # for connections from all the network interfaces available on the server.
@@ -52,18 +52,29 @@
 #
 # IF YOU ARE SURE YOU WANT YOUR INSTANCE TO LISTEN TO ALL THE INTERFACES
 # JUST COMMENT THE FOLLOWING LINE.
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ------------------------------------------------------------------------------
-# 默认情况下, 若没有配置 "bind" 指令, 则 redis 服务监听所有可用端口.
+# 默认情况下, 若没有配置 "bind" 指令, 则 redis 服务监听所有可用网络接口的连接.
+# 使用 "bind" 指令, 来配置一个或多个监听网络接口.
 # 
+# 实例: 绑定单个IP
+# bind 127.0.0.1
 #
-#
-#
-#
-#
-#
-bind 127.0.0.1
-bind 192.168.1.181
+# 实例: 绑定多个IP, 中间用空格隔开 
+# *注意: 不是书写多行, bind 只能使用一次, 配置多行, 认最后一行
+# bind 127.0.0.1 192.168.1.181
+# 
+# 警告: 如果 Redis 所在服务器, 直接暴露在外网上时, 不配置 bind 指令, 接受所有来源请求, 是非常
+# 危险的. 一般情况下, 通过 bind 指令, 来设置可以响应的来源.
+# 若确定要响应所有来源, 则注销掉 bind 指令配置即可
+# 
+# 备注: 上述中的 "network interfaces (网络接口)", 也就是说是网络接口.
+# 服务器可以有一个网络接口(通俗的说网卡),
+# 或者多个(有两张或以上的服务器，一张网卡连接外网，一张网卡连接内网). 
+# 打个比方说机器上有两个网卡, 分别为192.168.205.5 和192.168.205.6, 
+# 如果bind 192.168.205.5, 那么只有该网卡地址接受外部请求, 如果不绑定, 则两个网卡口都接受请求.
+# 当然网上的一些资料配置为bind 0.0.0.0, 该做法是将redis的监听绑定在所有的网卡上, 我们不建议这样做.
+# 
+bind 127.0.0.1 192.168.1.181
 # ------------------------------------------------------------------------------
 
 # Protected mode is a layer of security protection, in order to avoid that
@@ -97,13 +108,16 @@ bind 192.168.1.181
 # 默认情况下 protected mode 是 开启的.
 # 如果你希望其它主机也可以连接到 redis 服务. 即使没有配置认证信息, 服务端也没有显式的
 # 使用 "bind" 指令, 绑定接口. 则可以关闭 protected mode
-protected-mode no
+# 
+protected-mode yes
 # ------------------------------------------------------------------------------
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
 # ------------------------------------------------------------------------------
-# 设置端口
+# 配置监听端口, 默认 6379
+# 若配置 0, redis 将不监听任何 tcp socket 客户端连接
+# 
 port 10086
 # ------------------------------------------------------------------------------
 
@@ -114,19 +128,41 @@ port 10086
 # will silently truncate it to the value of /proc/sys/net/core/somaxconn so
 # make sure to raise both the value of somaxconn and tcp_max_syn_backlog
 # in order to get the desired effect.
+# ------------------------------------------------------------------------------
+# TCP 监听积压队列长度
+# 在高并发时, 把这个值调高可以避免客户端连接缓慢的问题.
+# 
+# 注意: 
+# Linux 内核默认的把这个值缩小成 /proc/sys/net/core/somaxconn 对应的值.
+# 所以, 修改时也需要修改 tcp-backlog & somaxconn 两处, 才能达到效果.
+# 
 tcp-backlog 511
+# ------------------------------------------------------------------------------
 
 # Unix socket.
 #
 # Specify the path for the Unix socket that will be used to listen for
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
-#
+# ------------------------------------------------------------------------------
+# Unix socket
+# 指定用来监听连接的 unix 套接字的路径.
+# 这个没有默认值, 所以如果你不指定的话, Redis就不会通过unix套接字来监听.
+# (不知道怎么用 -_-!)
+# 
 # unixsocket /tmp/redis.sock
 # unixsocketperm 700
+# ------------------------------------------------------------------------------
+
 
 # Close the connection after a client is idle for N seconds (0 to disable)
-timeout 0
+# ------------------------------------------------------------------------------
+# 设置客户端连接时的超时时间, 单位为秒.
+# 当客户端在这段时间内没有发出任何指令, 那么server端关闭该连接. 
+# 0 为关闭该设置。
+# 
+timeout 15
+# ------------------------------------------------------------------------------
 
 # TCP keepalive.
 #
@@ -142,9 +178,29 @@ timeout 0
 # On other kernels the period depends on the kernel configuration.
 #
 # A reasonable value for this option is 60 seconds.
+# ------------------------------------------------------------------------------
+# TCP 心跳包 - 保持活动
+# 非零, 则会定时向client发送tcp_ack包来探测client是否存活的
+# 这样做有两点好处:
+# 1) 检测死节点
+# 2) Take the connection alive from the point of view of network equipment in the middle.
+# 
+# 默认不探测
+# 官方建议值为60秒
+# 
+# 备注: 指定TCP连接是否为长连接,”侦探”信号由server端维护,长连接将会额外的增加server端的开支
+# 默认为0, 表示禁用. 
+# 非0值表示开启”长连接”, ”侦探”信号的发送间隔将有linux系统决定
+# 在多次”侦探”后,如果对等端仍不回复,将会关闭连接,否则连接将会被保持开启.
+# client端socket也可以通过配置keepalive选项,开启”长连接”.
+# 
+# 参考:
+# https://www.cnblogs.com/tinywan/p/6080293.html
+# 
 tcp-keepalive 0
+# ------------------------------------------------------------------------------
 
-################################# GENERAL #####################################
+############################# GENERAL - 常规配置 #####################################
 
 # By default Redis does not run as a daemon. Use 'yes' if you need it.
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
@@ -171,6 +227,7 @@ tcp-keepalive 0
 # Creating a pid file is best effort: if Redis is not able to create it
 # nothing bad happens, the server will start and run normally.
 # NOT SUPPORTED ON WINDOWS pidfile /var/run/redis.pid
+# ------------------------------------------------------------------------------
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -178,27 +235,56 @@ tcp-keepalive 0
 # verbose (many rarely useful info, but not a mess like the debug level)
 # notice (moderately verbose, what you want in production probably)
 # warning (only very important / critical messages are logged)
+# ------------------------------------------------------------------------------
+# 日志记录级别, 只接收以下四种
+# debug   适合开发环境,客户端操作信息都会输出日志 (很多信息，对开发/测试有用)
+# verbose 输出一些相对有用的信息,目前效果不明 (许多很少有用的信息，但不像调试级别混乱)
+# notice  适合生产环境 (适度详细, 适合生产环境)
+# warning 异常信息 (只记录非常重要/重要的信息)
+# 
 loglevel notice
+# ------------------------------------------------------------------------------
 
 # Specify the log file name. Also 'stdout' can be used to force
 # Redis to log on the standard output.
+# ------------------------------------------------------------------------------
+# 指定日志文件名称
+# 
 logfile ""
+# ------------------------------------------------------------------------------
+
 
 # To enable logging to the Windows EventLog, just set 'syslog-enabled' to
 # yes, and optionally update the other syslog parameters to suit your needs.
 # If Redis is installed and launched as a Windows Service, this will
 # automatically be enabled.
+# ------------------------------------------------------------------------------
+# 设置为 yes, 启用日志记录到Windows事件日志.
+# 若 redis 以 windows service 方式安装启动, 此项自动启用
+# 
 # syslog-enabled no
+# ------------------------------------------------------------------------------
+
 
 # Specify the source name of the events in the Windows Application log.
+# ------------------------------------------------------------------------------
+# 指定Windows应用程序日志中事件的源名称.
+# 
 # syslog-ident redis
+# ------------------------------------------------------------------------------
 
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
 # dbid is a number between 0 and 'databases'-1
+# ------------------------------------------------------------------------------
+# 设置数据库的数目。
+# 默认数据库是 DB 0，你可以在每个连接上使用 select <dbid> 命令选择一个不同的数据库，
+# 但是 dbid 必须是一个介于 0 到 databasees - 1 之间的值
+# 
 databases 16
+# ------------------------------------------------------------------------------
 
-################################ SNAPSHOTTING  ################################
+############################## SNAPSHOTTING - 快照  ##############################
 #
 # Save the DB on disk:
 #
@@ -219,10 +305,25 @@ databases 16
 #   like in the following example:
 #
 #   save ""
-
+# ------------------------------------------------------------------------------
+# RDB 持久化
+# 将内存中数据以快照的方式写入到二进制文件中, 默认的文件名为 dump.rdb
+# 指定在多长时间内，有多少次更新操作，就将数据同步到数据文件，可以多个条件配合
+# 示例:
+# 
+# save 900 1      900秒后（15分钟），如果至少有一个键被改变
+# save 300 10     300秒后（5分钟），如果至少有10个键更改
+# save 60  10000  60秒后，如果至少有10000个键被改变
+#
+# 注意：您可以通过注释掉所有“保存”行来完全禁用保存.
+# 也可以直接一个空字符串来实现停用, 如下:
+# save ""
+#
 save 900 1
 save 300 10
 save 60 10000
+# ------------------------------------------------------------------------------
+
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
@@ -237,13 +338,32 @@ save 60 10000
 # and persistence, you may want to disable this feature so that Redis will
 # continue to work as usual even if there are problems with disk,
 # permissions, and so forth.
+# ------------------------------------------------------------------------------
+# 默认情况下, 如果 redis 最后一次的后台保存失败, redis 将停止接受写操作.
+# 这样以一种强硬的方式让用户知道数据不能正确的持久化到磁盘,
+# 否则就会没人注意到灾难的发生.
+# 
+# 如果后台保存进程重新启动工作了, redis 也将自动的允许写操作.
+#
+# 然而你要是安装了靠谱的监控, 你可能不希望 redis 这样做, 那你就改成 no 好了
+# 
 stop-writes-on-bgsave-error yes
+# ------------------------------------------------------------------------------
+
 
 # Compress string objects using LZF when dump .rdb databases?
 # For default that's set to 'yes' as it's almost always a win.
 # If you want to save some CPU in the saving child set it to 'no' but
 # the dataset will likely be bigger if you have compressible values or keys.
+# ------------------------------------------------------------------------------
+# 是否在 dump .rdb 数据库的时候使用 LZF 压缩字符串
+# 默认都设为 yes
+# 压缩可能需要额外的cpu开支, 不过这能够有效的减小rdb文件的大小, 有利于存储/备份/传输/数据恢复.
+# 如果你希望保存子进程节省点 cpu, 你就设置它为 no.
+# 
 rdbcompression yes
+# ------------------------------------------------------------------------------
+
 
 # Since version 5 of RDB a CRC64 checksum is placed at the end of the file.
 # This makes the format more resistant to corruption but there is a performance
@@ -252,10 +372,24 @@ rdbcompression yes
 #
 # RDB files created with checksum disabled have a checksum of zero that will
 # tell the loading code to skip the check.
+# ------------------------------------------------------------------------------
+# 从RDB版本5开始, CRC64校验被放置在文件的末尾, 这使得格式更具抵抗腐败的能力.
+# 但是在保存和加载RDB文件时, 性能会受到影响(大约10%), 所以您可以禁用它以获得最佳性能.
+# 
+# 
+# 备注: 是否对rdb文件使用CRC64校验和,默认为”yes”,那么每个rdb文件内容的末尾都会追加CRC校验和.
+# 对于其他第三方校验工具,可以很方便的检测文件的完整性
+# 
 rdbchecksum yes
+# ------------------------------------------------------------------------------
 
 # The filename where to dump the DB
+# ------------------------------------------------------------------------------
+# 指定rdb文件的名称
+#
 dbfilename dump.rdb
+# ------------------------------------------------------------------------------
+
 
 # The working directory.
 #
