translate redis conf

--- a/doc/md/redis.windows.conf
+++ b/doc/md/redis.windows.conf
@@ -118,7 +118,7 @@ protected-mode yes
 # 配置监听端口, 默认 6379
 # 若配置 0, redis 将不监听任何 tcp socket 客户端连接
 # 
-port 10086
+port 10080
 # ------------------------------------------------------------------------------
 
 # TCP listen() backlog.
@@ -319,9 +319,10 @@ databases 16
 # 也可以直接一个空字符串来实现停用, 如下:
 # save ""
 #
-save 900 1
-save 300 10
-save 60 10000
+# save 900 1
+# save 300 10
+# save 60 10000
+save ""
 # ------------------------------------------------------------------------------
 
 
@@ -387,7 +388,7 @@ rdbchecksum yes
 # ------------------------------------------------------------------------------
 # 指定rdb文件的名称
 #
-dbfilename dump.rdb
+dbfilename dump10080.rdb
 # ------------------------------------------------------------------------------
 
 
@@ -399,9 +400,16 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./
+# ------------------------------------------------------------------------------
+# 指定本地数据库存放目录
+# 上面的 "dbfilename" 配置, 指定了保存数据的文件名. 
+# 这里只需要配置保存目录
+# ./ 当前目录, ../ 父级目录, / 根目录
+dir ./rdb/
+# ------------------------------------------------------------------------------
 
-################################# REPLICATION #################################
+
+############################## REPLICATION - 复制 ##############################
 
 # Master-Slave replication. Use slaveof to make a Redis instance a copy of
 # another Redis server. A few things to understand ASAP about Redis replication.
@@ -741,10 +749,10 @@ slave-priority 100
 #
 # Please check http://redis.io/topics/persistence for more information.
 
-appendonly no
+appendonly yes
 
 # The name of the append only file (default: "appendonly.aof")
-appendfilename "appendonly.aof"
+appendfilename "appendonly10080.aof"
 
 # The fsync() call tells the Operating System to actually write data on disk
 # instead of waiting for more data in the output buffer. Some OS will really flush
