--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -47,7 +47,7 @@
   </appSettings>
   <connectionStrings>
     <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />-->
-    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.130;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />
+    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=127.0.0.1;port=3306;Initial Catalog=jif.cms;uid=root;pwd=root" />
   </connectionStrings>
   <system.web>
 
