--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -72,9 +72,12 @@
         <add namespace="JIF.CMS.Management" />
       </namespaces>
     </pages>
+    
+    <!-- Froms 认证配置节点
     <authentication mode="Forms">
       <forms cookieless="UseCookies" name="ju" defaultUrl="/home" loginUrl="/welcome"></forms>
     </authentication>
+    -->
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
