--- a/code/JIF.CMS/JIF.CMS.Management/appsettings.json
+++ b/code/JIF.CMS/JIF.CMS.Management/appsettings.json
@@ -9,7 +9,8 @@
     "UploadAddress": "http://www.qiniu.com"
   },
   "RedisConfig": {
-    "Enabled": false,
-    "Server": "192.168.0.118:6379"
+    "Enabled": true,
+    //"Server": "192.168.0.118:6379",
+    "Server": "127.0.0.1:10082"
   }
 }
