foo large time add PerentChildDataTest

--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Tests\CommonLogTest.cs" />
     <Compile Include="Tests\EncyptHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ExceptionTest.cs" />
     <Compile Include="Tests\FileOperateTest.cs" />
     <Compile Include="Tests\RandomHelperTest.cs" />
     <Compile Include="Tests\NpoiExcelHelperTest.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="Tests\JsonConvertTest.cs" />
     <Compile Include="Tests\TypeTest.cs" />
     <Compile Include="Tests\RegexHelperTest.cs" />
+    <Compile Include="Tests\PerentChildDataTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
