--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -38,7 +38,7 @@
     </logging>
   </common>
   <!-- commonlogging 配置 -->
-  
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -47,7 +47,7 @@
   </appSettings>
   <connectionStrings>
     <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />-->
-    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=127.0.0.1;port=3306;Initial Catalog=jif.cms;uid=root;pwd=root" />
+    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.130;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />
   </connectionStrings>
   <system.web>
 
@@ -72,7 +72,7 @@
         <add namespace="JIF.CMS.Management" />
       </namespaces>
     </pages>
-    
+
     <!-- Froms 认证配置节点
     <authentication mode="Forms">
       <forms cookieless="UseCookies" name="ju" defaultUrl="/home" loginUrl="/welcome"></forms>
